# PythonProject

./: .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: generators.py  masks.py  processing.py  widget.py
tests/: test_generators.py  test_masks.py  test_processing.py  test_widget.py
